# openGLPlotLive

./: .clang-format  .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  examplePlot.cpp
src/: CMakeLists.txt
src/includes/glad/: glad.h
src/lines/: ISingleLine2D.cpp
src/rendering/: CMakeLists.txt  ShaderSet.cpp  ShaderSet.h
src/scatterPlot/: IScatterPlot2D.cpp
src/texts/: CMakeLists.txt
src/textures/: TextureManager.cpp
src/window/: window.cpp
